--- a/JnarioMavenTest/pom.xml
+++ b/JnarioMavenTest/pom.xml
@@ -16,4 +16,34 @@
   		<type>maven-plugin</type>
   	</dependency>
   </dependencies>
+  <build>
+	<plugins>
+	  <plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-surefire-plugin</artifactId>
+	    <version>2.12</version>
+	    <configuration>
+	      <includes>
+	        <include>**/*Spec*.java</include>
+	        <include>**/*Feature.java</include>
+	        <include>**/*Test.java</include>
+	        <include>**/*TestCase.java</include>
+	      </includes>
+	    </configuration>
+	  </plugin>
+	  <plugin>
+	    <groupId>org.jnario</groupId>
+	    <artifactId>jnario-maven-plugin</artifactId>
+	    <version>0.4.2</version>
+	    <executions>
+	      <execution>
+	        <goals>
+	          <goal>testCompile</goal>
+	          <goal>xtend-test-install-debug-info</goal>
+	        </goals>
+	      </execution>
+	    </executions>
+	  </plugin>
+	</plugins>
+  </build>
 </project>
